--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
 h1{
     color: red;
 }
+
+h3{
+    text-align: right;
+    border: 5px solid;
+    width: 50%;
+    text-decoration: green underline;
+
+}
